--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,13 +1,14 @@
 ---
 galaxy_info:
-  author: calvinbui
+  author: kirill-zak
   description: Docker for Ubuntu LTS
-  company: https://calvin.me
+  company: https://kirill-zak.ru
   license: GPLv3
   min_ansible_version: 2.7
   platforms:
     - name: Ubuntu
       versions:
+        - focal
         - bionic
         - xenial
   galaxy_tags:
