--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -3,23 +3,11 @@ dependency:
   name: galaxy
 driver:
   name: docker
-lint:
-  name: yamllint
 platforms:
-  - name: ansible-docker
-    image: ubuntu:${UBUNTU_IMAGE_TAG:-latest}
+  - name: instance
+    image: docker.io/pycontribs/ubuntu:latest
+    pre_build_image: true
 provisioner:
   name: ansible
-  options:
-    v: true
-  lint:
-    name: ansible-lint
-  playbooks:
-    prepare: prepare.yml
-    converge: playbook.yml
-scenario:
-  name: default
 verifier:
   name: testinfra
-  lint:
-    name: flake8
