--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,6 +2,8 @@
 
 docker_gpg_key: 9DC858229FC7DD38854AE2D88D81803C0EBFCD88
 docker_ubuntu_release: bionic
+docker_service_state: started
+docker_service_enabled: true
 
 docker_users:
   - root
