--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -47,14 +47,17 @@
       - docker-ce-cli
       - containerd.io
     state: present
-  register: result
-  until: result is success
-  retries: 5
-  delay: 5
+
+- name: Ensure Docker is started and enabled at boot.
+  service:
+    name: docker
+    state: "{{ docker_service_state }}"
+    enabled: "{{ docker_service_enabled }}"
 
 - name: Add user to Docker group
   user:
     name: "{{ item }}"
     groups: docker
     append: true
-  loop: "{{ docker_users }}"
+  with_items: "{{ docker_users }}"
+  when: docker_users| length > 0
